--- a/src/app/components/news-list/news-list.component.html
+++ b/src/app/components/news-list/news-list.component.html
@@ -1,1 +1,13 @@
-<p>news-list works!</p>
+<div class="row row-cols-1 row-cols-md-2">
+  <div *ngFor="let news of newsList" class="col mb-4">
+    <div class="card">
+      <img [src]="news.urlToImage" class="card-img-top" alt="...">
+      <div class="card-body">
+        <span class="badge bg-primary mb-1">{{news.source.name}}</span>
+        <h5 class="card-title">{{news.title}}</h5>
+        <p class="card-text">{{news.description}}</p>
+        <a [href]="news.url" target="_blank" class="btn btn-primary">Read more</a>
+      </div>
+    </div>
+  </div>
+</div>
